[package]
name = "llvm-viz"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
llvm-plugin = { version = "0.6.0", features = ["llvm18-0"] }
petgraph = "0.7.1"

# # Error handling
# thiserror = "1.0"
# anyhow = "1.0"

# # Logging
# log = "0.4"
# env_logger = "0.10"

# # Graph data structures
# petgraph = "0.6"

# [dev-dependencies]
# criterion = "0.5"
# pretty_assertions = "1.3"

# [[bench]]
# name = "graph_benchmarks"
# harness = false
